feat: 2023 config changes